# musical-microservice

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pytest.ini  Dockerfile  Makefile  README.md  compose.yaml  dev.Dockerfile  environment.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_locked.txt  setup.cfg
.github/workflows/: docker-image.yml  python-app.yml
musical_microservice/: app.py  client.py  server.py
musical_microservice/business/: music_parameter_processor.py  music_sequencer.py
musical_microservice/models/: music.py  musical_parameters.py  util.py
musical_microservice/modules/: music.py  music_sequencer.py  musical_parameters.py  track.py  util.py
musical_microservice/modules/data_structures/: tree.py
musical_microservice/modules/instrumentation/: instrument.py  strings.py  winds.py
musical_microservice/modules/playback/: music.py  music_sequencer.py  track.py
musical_microservice/modules/util/: storage.py
musical_microservice/prisma/: schema.prisma
musical_microservice/services/: audio_server.py  musical_microservice.py
proto/: musical_server.proto
tests/: test_music_parameter_processor.py
tests/business/: test_music_parameter_processor.py  test_music_sequencer.py
tests/data/music/: source.json
tests/models/: test_music.py
tests/modules/: .env.test  conftest.py  test_music.py  test_music_sequencer.py
tests/modules/data/: config.json
tests/modules/data_structures/: test_tree.py
tests/modules/instrumentation/: test_instrument.py
tests/modules/playback/: test_music.py  (+1 more)
(+5 files in other folders)
