[tool.poetry]
name = "musical-microservice"
version = "0.1.0"
description = ""
authors = ["pat ike egb <pat@egb.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
music21 = "^9.1.0"
jmespath = "^1.0.1"
grpcio = "^1.59.3"
prisma = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
